# cookie_store

./: .travis.yml  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  README.md  release.sh
.github/workflows/: ci.yml
src/: cookie.rs  cookie_domain.rs  cookie_expiration.rs  cookie_path.rs  cookie_store.rs  lib.rs  reqwest_impl.rs  serde.rs  serialization.rs  utils.rs
src/serde/: json.rs  netscape.rs  ron.rs
