[package]
authors = ["Patrick Fernie <patrick.fernie@gmail.com>"]
description = "Implementation of Cookie storage and retrieval"
name = "cookie_store"
version = "0.21.0" # managed by release.sh
edition = "2018"
repository = "https://github.com/pfernie/cookie_store"
documentation = "https://docs.rs/cookie_store"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["cookie", "jar", "store", "http"]  # free text
categories = ["web-programming::http-client", "web-programming"]  # https://crates.io/category_slugs

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["public_suffix"]

# uses `indexmap::IndexMap` in lieu of HashMap internally, so cookies are maintained in insertion/creation order
preserve_order = ["indexmap"]
public_suffix = ["publicsuffix"]
wasm-bindgen = ["time/wasm-bindgen"]

# Enable logging the values of cookies marked 'secure', off by default as values may be sensitive
log_secure_cookie_values = []

[dependencies]
idna = "0.5.0"
log = "0.4.17"
publicsuffix = { version = "2.2.3", optional = true }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
time = "0.3.16"
url = "2.3.1"

indexmap = { version = "2.0.0", optional = true }

[dependencies.cookie]
features = ["percent-encode"]
version = "0.18.0"
